用户管理模块

--- a/BugFollowing/app/web/accounts/accounts_index.html
+++ b/BugFollowing/app/web/accounts/accounts_index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh-CN" class="theme-orange" ng-app="dashboard">
+<html lang="zh-CN" class="theme-orange" ng-app="accounts">
 <head>
     <meta charset="utf-8">
-    <title>主页</title>
+    <title>用户管理</title>
     <meta name="keywords" content="">
+    <base href="/">
     <meta name="description" content="">
     <meta name="author" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,7 +22,7 @@
     <script src="script/lib/Angular/angular-route.js"></script>
     <script src="script/require.js"></script>
     <script src="script/modules/config.js"></script>
-    <script src="script/app/dashboard.js"></script>
+    <script src="script/app/accounts.js"></script>
 </head>
 <body>
 <!--content-->
