--- a/BugFollowing/app/web/accounts/accounts_main.html
+++ b/BugFollowing/app/web/accounts/accounts_main.html
@@ -46,7 +46,7 @@
         <div class="panel-body">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <button class="btn btn-primary"><span>新建条目</span></button>
+                    <button class="btn btn-primary" ng-click="updateView()"><span>新建条目</span></button>
                     <button class="btn btn-warning"><span>编辑选中</span></button>
                     <button class="btn btn btn-danger" ng-click="deleteSumbit()"><span>删除选中</span></button>
                 </div>
@@ -87,11 +87,13 @@
                     <div class="panel-footer">
                         <div class="pull-right">
                             <button class="btn btn-info active">首页</button>
-                            <button class="btn btn-info">上一页</button><span>
-                <button class="btn btn-info">1</button>
-                <button class="btn btn-info">2</button>
-                <button class="btn btn-info">3</button>
-                <button class="btn btn-info">4</button></span>
+                            <button class="btn btn-info">上一页</button>
+                            <span>
+                                <button class="btn btn-info">1</button>
+                                <button class="btn btn-info">2</button>
+                                <button class="btn btn-info">3</button>
+                                <button class="btn btn-info">4</button>
+                            </span>
                             <button class="btn btn-info">下一页</button>
                             <button class="btn btn-info">末页</button>
                         </div>
