--- a/BugFollowing/app/web/common/menu.html
+++ b/BugFollowing/app/web/common/menu.html
@@ -2,8 +2,9 @@
     <h6>组件列表</h6>
     <ul class="nav father-list">
         <li><a href="/"><i class="fa fa-bell"></i><span>管理导航</span></a></li>
-        <li><a href="/accounts"><i class="fa fa-bell"></i><span>用户管理</span></a></li>
+        <li><a href="/accounts/#/"><i class="fa fa-bell"></i><span>用户管理</span></a></li>
         <li><a href="/products"><i class="fa fa-bell"></i><span>产品管理</span></a></li>
+        <!--<li><a href="/accounts/#/update"><i class="fa fa-bell"></i><span>产品管理</span></a></li>-->
         <!--<li><a><i class="fa fa-bell"></i><span>部件</span></a>-->
             <!--<ul class="nav son-list">-->
                 <!--<li><a href="/project/page/table/index.html"><i class="fa fa-bell"></i><span>表格</span></a></li>-->
