--- a/BugFollowing/app/web/accounts/accounts_index.html
+++ b/BugFollowing/app/web/accounts/accounts_index.html
@@ -34,7 +34,7 @@
         <div id="menu" class="leftpanel">
             <div ng-include="'common/menu.html'"></div>
         </div>
-        <div class="mainpanel">
+        <div class="mainpanel" ng-controller="IndexController">
             <div ng-view></div>
         </div>
     </section>
