商品管理模块

--- a/Mall03/app/web/admin/common/header-bar.html
+++ b/Mall03/app/web/admin/common/header-bar.html
@@ -1,5 +1,5 @@
 <section class="container-fluid">
-    <a href="/project/page/index/index.html" class="logo-big text-center pull-left"><span>[</span><span class="ad-name">ADMIN</span><span>]</span></a>
+    <a href="/" class="logo-big text-center pull-left"><span>[</span><span class="ad-name">ADMIN</span><span>]</span></a>
     <nav class="myheader-bar">
         <!-- 自定义添加列表-->
         <ul class="nav navbar-left">
