--- a/Mall03/app/web/admin/users/users_index.html
+++ b/Mall03/app/web/admin/users/users_index.html
@@ -23,6 +23,7 @@
     <script src="script/require.js"></script>
     <script src="script/modules/config.js"></script>
     <script src="script/admin/users.js"></script>
+    <script src="script/admin/service.js"></script>
 </head>
 <body>
 <!--content-->
