--- a/Mall03/app/web/admin/common/menu.html
+++ b/Mall03/app/web/admin/common/menu.html
@@ -1,21 +1,8 @@
 <section class="container-fluid menu-container">
     <h6>组件列表</h6>
     <ul class="nav father-list">
-        <li><a href="/"><i class="fa fa-bell"></i><span>管理导航</span></a></li>
-        <!--<li><a href="/accounts/#/"><i class="fa fa-bell"></i><span>用户管理</span></a></li>-->
-        <li><a href="/users"><i class="fa fa-bell"></i><span>用户管理</span></a></li>
-        <!--<li><a href="/accounts/#/update"><i class="fa fa-bell"></i><span>产品管理</span></a></li>-->
-        <!--<li><a><i class="fa fa-bell"></i><span>部件</span></a>-->
-            <!--<ul class="nav son-list">-->
-                <!--<li><a href="/project/page/table/index.html"><i class="fa fa-bell"></i><span>表格</span></a></li>-->
-                <!--<li><a href="/project/page/form/index.html"><i class="fa fa-bell"></i><span>表单</span></a></li>-->
-                <!--<li><a href="/project/page/modal/index.html"><i class="fa fa-bell"></i><span>modal</span></a></li>-->
-            <!--</ul>-->
-        <!--</li>-->
-        <!--<li><a><i class="fa fa-bell"></i><span>特殊页</span></a>-->
-            <!--<ul class="nav son-list">-->
-                <!--<li><a href="/accounts"><i class="fa fa-bell"></i><span>登录页</span></a></li>-->
-            <!--</ul>-->
-        <!--</li>-->
+        <li><a href="/#/"><i class="fa fa-bell"></i><span>管理导航</span></a></li>
+        <li><a href="/users#/"><i class="fa fa-bell"></i><span>用户管理</span></a></li>
+        <li><a href="/shops#/"><i class="fa fa-bell"></i><span>店铺管理</span></a></li>
     </ul>
 </section>
