--- a/Mall03/app/web/admin/common/menu.html
+++ b/Mall03/app/web/admin/common/menu.html
@@ -1,8 +1,8 @@
 <section class="container-fluid menu-container">
     <h6>组件列表</h6>
     <ul class="nav father-list">
-        <li><a href="/#/"><i class="fa fa-bell"></i><span>管理导航</span></a></li>
-        <li><a href="/users#/"><i class="fa fa-bell"></i><span>用户管理</span></a></li>
-        <li><a href="/shops#/"><i class="fa fa-bell"></i><span>店铺管理</span></a></li>
+        <li><a href="/admin/#/"><i class="fa fa-bell"></i><span>管理导航</span></a></li>
+        <li><a href="/admin/users#/"><i class="fa fa-bell"></i><span>用户管理</span></a></li>
+        <li><a href="/admin/shops#/"><i class="fa fa-bell"></i><span>店铺管理</span></a></li>
     </ul>
 </section>
