--- a/Mall03/project/app/web/mobile/common/mobile-head.html
+++ b/Mall03/project/app/web/mobile/common/mobile-head.html
@@ -1,3 +1,5 @@
+<#include "/mobile/common/mobile-head.html" />
+<!--mobile-head-->
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="renderer" content="webkit">
@@ -31,4 +33,5 @@
 </script>
 <link rel="stylesheet" href="../static/css/lib/font-awesome.css">
 <link rel="stylesheet" href="../static/css/mobile/common.css">
+<!--mobile-head-->
 
