首页,后台文件

--- a/Mall03/project/app/web/admin/common/menu.html
+++ b/Mall03/project/app/web/admin/common/menu.html
@@ -1,7 +1,7 @@
 <section class="container-fluid menu-container">
     <h6>组件列表</h6>
     <ul class="nav father-list">
-        <li><a href="/admin/#/"><i class="fa fa-bell"></i><span>管理导航</span></a></li>
+        <li><a href="/admin/#/"><i class="fa fa-bell"></i><span>首页管理</span></a></li>
         <li><a href="/admin/users#/"><i class="fa fa-bell"></i><span>用户管理</span></a></li>
         <li><a href="/admin/shops#/"><i class="fa fa-bell"></i><span>店铺管理</span></a></li>
     </ul>
