--- a/Mall03/project/app/web/mobile/home/index.html
+++ b/Mall03/project/app/web/mobile/home/index.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="/static/css/lib/font-awesome.css">
     <link rel="stylesheet" href="/static/css/mobile/common.css">
     <title>移动端首页</title>
+    <link rel="stylesheet" href="/static/css/lib/swiper-3.3.1.min.css">
     <link rel="stylesheet" href="/static/css/mobile/home.css">
     <script src="/script/mobile/home.es6.js"></script>
 </head>
@@ -52,8 +53,22 @@
         <i class="col fa fa-shopping-cart"></i>
     </header>
     <section class="row view-1">
-        <div class="banner">
-            <img src="/static/img/mobile_home/banner01.jpg" />
+        <div class="banner swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="/static/img/mobile_home/banner01.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="/static/img/mobile_home/banner02.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="/static/img/mobile_home/banner03.jpg" />
+                </div>
+                <div class="swiper-slide">
+                    <img src="/static/img/mobile_home/banner04.jpg" />
+                </div>
+            </div>
+            <div class="swiper-pagination"></div>
         </div>
         <div class="row nav-group" ng-controller="NavController">
             <div class="col nav" ng-click="snap()">
@@ -108,13 +123,13 @@
             <h1 class="goods-group-title">名商家</h1>
         </div>
         <div class="row shop-banner-group">
-            <a class="col shop-banner-wrap">
+            <a class="col shop-banner-wrap" href="/mobile/shop/#/?op=all&shopid=1">
                 <img src="/static/img/mobile_home/ad.jpg" />
             </a>
-            <a class="col shop-banner-wrap">
+            <a class="col shop-banner-wrap" href="/mobile/shop/#/?op=all&shopid=2">
                 <img src="/static/img/mobile_home/ad.jpg" />
             </a>
-            <a class="col shop-banner-wrap">
+            <a class="col shop-banner-wrap" href="/mobile/shop/#/?op=all&shopid=3">
                 <img src="/static/img/mobile_home/ad.jpg" />
             </a>
         </div>
