--- a/Mall03/project/app/web/mobile/shop/index.html
+++ b/Mall03/project/app/web/mobile/shop/index.html
@@ -41,8 +41,8 @@
 <body>
 <!--content-->
 <div class="container" ng-controller="NavController">
-    {{shopid}}
-    我是商店界面111
+    shop
+    <img src="/static/img/admin_users/user.png" data-echo="{{data.logo}}" />
 </div>
 </body>
 </html>
