--- a/AlphaMM/project/app/web/html/customer-mobile/home/home_index.v1.html
+++ b/AlphaMM/project/app/web/html/customer-mobile/home/home_index.v1.html
@@ -15,13 +15,13 @@
     <meta name="wap-font-scale" content="no">
     <title>苏宁首页</title>
     <link rel="stylesheet" href="/static/css/app-core/lib.v1.css">
-    <link rel="stylesheet" href="static/css/lib/font-awesome.min.css">
-    <link rel="stylesheet" href="static/css/lib/swiper-3.3.1.min.css">
-    <link rel="stylesheet" href="static/css/lib/normalize.css">
+    <link rel="stylesheet" href="/static/css/lib/font-awesome.min.css">
+    <link rel="stylesheet" href="/static/css/lib/swiper-3.3.1.min.css">
+    <link rel="stylesheet" href="/static/css/lib/normalize.css">
     <link rel="stylesheet" href="/static/css/customer-mobile/home.v1.css">
-    <script src="js/lib/rem/rem.js"></script>
-    <script src="js/require.js"></script>
-    <script src="js/config.js"></script>
+    <script src="/js/lib/rem/rem.js"></script>
+    <script src="/js/require.js"></script>
+    <script src="/js/config.js"></script>
     <script>require(['cmHome']);</script>
   </head>
   <body>
