--- a/Elagance/app/lead.html
+++ b/Elagance/app/lead.html
@@ -16,6 +16,7 @@
     <link rel="styleSheet" href="//cdn.bootcss.com/normalize/4.1.1/normalize.min.css">
     <link rel="styleSheet" href="//cdn.bootcss.com/font-awesome/4.6.2/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/reset.v1.css">
+    <link rel="stylesheet" href="/assets/css/elagance.animate.css">
     <link rel="stylesheet" href="/assets/css/lead.css">
     <!--前置js-->
     <script src="/js/remSetting.build.js"></script>
@@ -23,15 +24,17 @@
   </head>
   <body>
     <!--content-->
-    <div class="container lead-body">
-      <div class="lead-body-logo"></div>
-      <div class="lead-body-title"></div>
-      <div class="lead-body-text">
-        <h3 class="word">现在，找到自己的节奏</h3>
-      </div>
-      <div class="lead-body-sign">
-        <button id="signIn" class="lead-body-sign-in mt-02r"><span>登录</span></button>
-        <button class="lead-body-sign-up mt-05r"><span>注册</span></button>
+    <div class="container">
+      <div class="lead-body">
+        <div class="lead-body-logo animated fadeInDown"></div>
+        <div class="lead-body-title"></div>
+        <div class="lead-body-text">
+          <h3 class="word">现在，找到自己的节奏</h3>
+        </div>
+        <div class="lead-body-sign">
+          <button id="signIn" class="lead-body-sign-btn mt-02r animated fadeIn"><span>登录</span></button>
+          <button id="signUp" class="lead-body-sign-btn mt-05r animated fadeIn"><span>注册</span></button>
+        </div>
       </div>
     </div>
   </body>
