--- a/Elagance/app/html/lead.html
+++ b/Elagance/app/html/lead.html
@@ -12,17 +12,32 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="wap-font-scale" content="no">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
-    <title>登录</title>
+    <title>Elagance</title>
     <link rel="styleSheet" href="//cdn.bootcss.com/font-awesome/4.6.2/css/font-awesome.min.css">
     <link rel="stylesheet" href="/assets/css/elagance.css">
-    <link rel="stylesheet" href="/assets/css/elagance.signin.v1.css">
+    <link rel="stylesheet" href="/assets/css/elagance.lead.v1.css">
     <!--前置js-->
     <script src="/js/remSetting.build.js"></script>
   </head>
   <body>
     <!--content-->
-    <div class="container">
-      <div class="signin-body"></div>
+    <div class="app-view">
+      <div class="container">
+        <div class="lead-body">
+          <div class="lead-body-logo animated fadeInDown"></div>
+          <div class="lead-body-title"></div>
+          <div class="lead-body-text">
+            <h3 class="word">现在，找到自己的节奏</h3>
+          </div>
+          <div class="lead-body-sign">
+            <button id="signIn" class="lead-body-sign-btn mt-02r animated fadeIn"><span>登录</span></button>
+            <button id="signUp" class="lead-body-sign-btn mt-05r animated fadeIn"><span>注册</span></button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="signin-body"></div>
+      </div>
     </div>
   </body>
 </html>
