--- a/Elagance/app/lead.html
+++ b/Elagance/app/lead.html
@@ -13,29 +13,17 @@
     <meta name="wap-font-scale" content="no">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
     <title>Elagance</title>
-    <link rel="styleSheet" href="//cdn.bootcss.com/normalize/4.1.1/normalize.min.css">
     <link rel="styleSheet" href="//cdn.bootcss.com/font-awesome/4.6.2/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/assets/css/reset.v1.css">
-    <link rel="stylesheet" href="/assets/css/elagance.animate.css">
-    <link rel="stylesheet" href="/assets/css/lead.css">
+    <link rel="stylesheet" href="/assets/css/elagance.css">
+    <link rel="stylesheet" href="/assets/css/elagance.lead.v1.css">
     <!--前置js-->
     <script src="/js/remSetting.build.js"></script>
     <script src="/js/eLead.build.js"></script>
   </head>
   <body>
-    <!--content-->
-    <div class="container">
-      <div class="lead-body">
-        <div class="lead-body-logo animated fadeInDown"></div>
-        <div class="lead-body-title"></div>
-        <div class="lead-body-text">
-          <h3 class="word">现在，找到自己的节奏</h3>
-        </div>
-        <div class="lead-body-sign">
-          <button id="signIn" class="lead-body-sign-btn mt-02r animated fadeIn"><span>登录</span></button>
-          <button id="signUp" class="lead-body-sign-btn mt-05r animated fadeIn"><span>注册</span></button>
-        </div>
-      </div>
+    <!--spa容器-->
+    <div id="spa">
+
     </div>
   </body>
 </html>
