--- a/Elagance/app/html/lead.html
+++ b/Elagance/app/html/lead.html
@@ -21,8 +21,8 @@
   </head>
   <body>
     <!--content-->
-    <div class="app-view">
-      <div class="container">
+    <div class="view">
+      <div class="view-container view-lead">
         <div class="lead-body">
           <div class="lead-body-logo animated fadeInDown"></div>
           <div class="lead-body-title"></div>
@@ -30,12 +30,12 @@
             <h3 class="word">现在，找到自己的节奏</h3>
           </div>
           <div class="lead-body-sign">
-            <button id="signIn" class="lead-body-sign-btn mt-02r animated fadeIn"><span>登录</span></button>
-            <button id="signUp" class="lead-body-sign-btn mt-05r animated fadeIn"><span>注册</span></button>
+            <button id="signIn" class="lead-body-sign-btn mt-02r animated fadeIn sign-active-1"><span>登录</span></button>
+            <button id="signUp" class="lead-body-sign-btn mt-05r animated fadeIn sign-active-1"><span>注册</span></button>
           </div>
         </div>
       </div>
-      <div class="container">
+      <div class="view-container view-signin">
         <div class="signin-body"></div>
       </div>
     </div>
