--- a/Elagance/app/html/react-text2.html
+++ b/Elagance/app/html/react-text2.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
 </head>
 <body>
-    <h1>1111</h1>
     <div id="spa"></div>
-    <script src="../js/test.build.js"></script>
+    <script src="../js/test2.build.js"></script>
 </body>
 </html>
