--- a/VueWebpack/app/index.html
+++ b/VueWebpack/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>vueDemo</title>
-  </head>
+  <link href="js/../assets/css/index.css" rel="stylesheet"></head>
   <body>
     <h1>项目目录测试!!!!!!!!!!</h1>
   <div id="test">{{msg}}</div>
-  </body>
+  <script type="text/javascript" src="js/index.build.js"></script></body>
 </html>
