--- a/VueWebpack/app/bank.html
+++ b/VueWebpack/app/bank.html
@@ -6,5 +6,5 @@
 </head>
 <body>
     <app></app>
-<script type="text/javascript" src="js/bank.build.js"></script></body>
+<script type="text/javascript" src="js/build.bank.js"></script></body>
 </html>
