--- a/VueWebpack/app/round.html
+++ b/VueWebpack/app/round.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <app></app>
-<script src="./js/round.build.js"></script>
+<script type="text/javascript" src="/js/common.js"></script>
 <script type="text/javascript" src="js/build.round.js"></script></body>
 </html>
