--- a/VueWebpack/app/index.html
+++ b/VueWebpack/app/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>vueDemo</title>
-  <link href="js/../assets/css/index.css" rel="stylesheet"></head>
+  <link href="assets/css/index.css" rel="stylesheet"></head>
   <body>
-    <h1>项目目录测试1111122222222211</h1>
+    <h1>项目目录测试</h1>
     <div id="test">{{msg}}</div>
     <script type="text/javascript" src="js/common.js"></script>
   <script type="text/javascript" src="js/build.index.js"></script></body>
