--- a/VueWebpack/app/bank.html
+++ b/VueWebpack/app/bank.html
@@ -5,7 +5,8 @@
     <title></title>
 </head>
 <body>
+    <h1>bank</h1>
     <app></app>
     <script type="text/javascript" src="/js/common.js"></script>
-<script type="text/javascript" src="js/build.bank.js"></script></body>
+<script type="text/javascript" src="/js/build.bank.js"></script></body>
 </html>
