--- a/VueWebpack/app/round.html
+++ b/VueWebpack/app/round.html
@@ -7,5 +7,5 @@
 <body>
 <app></app>
 <script type="text/javascript" src="/js/common.js"></script>
-<script type="text/javascript" src="js/build.round.js"></script></body>
+<script type="text/javascript" src="/js/build.round.js"></script></body>
 </html>
