--- a/VueWebpack/app/bank.html
+++ b/VueWebpack/app/bank.html
@@ -1,12 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-    <h1>bank</h1>
-    <app></app>
-    <script type="text/javascript" src="/js/common.js"></script>
-<script type="text/javascript" src="/js/build.bank.js"></script></body>
-</html>
+<!DOCTYPE html> <html> <head lang=en> <meta charset=UTF-8> <title></title> </head> <body> <h1>bank</h1> <app></app> <script src=/js/common.js></script> <script type="text/javascript" src="/js/build.bank.js"></script></body> </html>
