--- a/VueWebpack/app/round.html
+++ b/VueWebpack/app/round.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-<app></app>
-<script type="text/javascript" src="/js/common.js"></script>
-<script type="text/javascript" src="/js/build.round.js"></script></body>
-</html>
+<!DOCTYPE html> <html> <head lang=en> <meta charset=UTF-8> <title></title> </head> <body> <app></app> <script src=/js/common.js></script> <script type="text/javascript" src="/js/build.round.js"></script></body> </html>
