--- a/VueWebpack/source/modules/index/index.html
+++ b/VueWebpack/source/modules/index/index.html
@@ -13,7 +13,7 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="wap-font-scale" content="no">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
-    <title>测试页</title>
+    <title>首页</title>
     <link href="/lib/normalize/normalize.min.css" rel="stylesheet">
     <link href="/assets/css/build.common.css" rel="stylesheet">
   </head>
@@ -21,7 +21,7 @@
     <div id="header">
       <barheader></barheader>
     </div>
-    <h1 class="text-center">项目构建测试-测试页</h1>
+    <h1 class="text-center">项目构建测试-首页</h1>
     <div id="test" class="text-center">{{msg}}</div>
     <script type="text/javascript" src="/js/build.common.js"></script>
   </body>
