--- a/VueWebpack/source/bank/index/tpl.index.html
+++ b/VueWebpack/source/bank/index/tpl.index.html
@@ -13,16 +13,13 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="wap-font-scale" content="no">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
-    <title>测试页</title>
+    <title>首页</title>
     <link href="/lib/normalize/normalize.min.css" rel="stylesheet">
-    <link href="/assets/css/build.common.css" rel="stylesheet">
-  <link href="/assets/css/build.template.css?ad40c1c1f726c776b31f" rel="stylesheet"></head>
+    <link href="/assets/css/common/common.build.css" rel="stylesheet">
+  </head>
   <body>
-    <div id="header">
-      <barheader></barheader>
-    </div>
-    <h1 class="text-center">项目构建测试-测试页</h1>
-    <div id="test" class="text-center">{{msg}}</div>
-    <script type="text/javascript" src="/js/build.common.js"></script>
-  <script type="text/javascript" src="/js/build.template.js?ad40c1c1f726c776b31f"></script></body>
+    <h1 class="text-center">项目构建测试-首页</h1>
+    <img src="./test.jpg">
+    <script type="text/javascript" src="/assets/js/common/common.build.js"></script>
+  </body>
 </html>
