--- a/VueWebpack/source/bank/index/tpl.index.html
+++ b/VueWebpack/source/bank/index/tpl.index.html
@@ -14,11 +14,14 @@
     <meta name="wap-font-scale" content="no">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
     <title>首页</title>
-    <link href="/lib/normalize/normalize.min.css" rel="stylesheet">
     <link href="/assets/css/common/common.build.css" rel="stylesheet">
   </head>
   <body>
-    <h1 class="text-center">项目构建测试-首页</h1>
+    <div id="header">
+      <barheader></barheader>
+    </div>
+    <div id="test"></div>
+    <h1 class="text-center">项目构建测试</h1>
     <img src="./test.jpg">
     <script type="text/javascript" src="/assets/js/common/common.build.js"></script>
   </body>
