--- a/VueWebpack/source/mall/index/tpl.index.html
+++ b/VueWebpack/source/mall/index/tpl.index.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="renderer" content="webkit">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="wap-font-scale" content="no">
-    <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
-    <title>首页</title>
-    <link href="/lib/normalize/normalize.min.css" rel="stylesheet">
-    <link href="/assets/css/build.common.css" rel="stylesheet">
-  </head>
-  <body>
-    <div id="header">
-      <barheader></barheader>
-    </div>
-    <h1 class="text-center">项目构建测试-首页</h1>
-    <div id="test" class="text-center">{{msg}}</div>
-    <script type="text/javascript" src="/js/build.common.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="keywords" content="">
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="renderer" content="webkit">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="wap-font-scale" content="no">
+  <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=no,width=device-width,initial-scale=1.0">
+  <title>首页</title>
+  <link href="/assets/css/common/common.build.css" rel="stylesheet">
+</head>
+<body>
+<div id="header"></div>
+<div id="test"></div>
+<h1 class="text-center">项目构建测试</h1>
+<script type="text/javascript" src="/assets/js/common/common.build.js"></script>
+</body>
 </html>
